--- a/ubuntu/conf/lamp/000-default.conf
+++ b/ubuntu/conf/lamp/000-default.conf
@@ -15,7 +15,7 @@
 <VirtualHost *:80>
 	#
 	# Email do administrador do Apache2
-	ServerAdmin webmaster@pti.intra
+	ServerAdmin webmaster@vinicius.intra
 	#
 	# Diretório raiz da hospedagem de sites no Apache2
 	DocumentRoot /var/www/html
